--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.5.0",
+    "@expo-google-fonts/montserrat": "^0.1.0",
     "expo": "~40.0.0",
+    "expo-app-loading": "^1.0.1",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-svg": "12.1.0",
     "react-native-web": "~0.13.12",
-    "react-router-native": "^5.2.0"
+    "react-router-native": "^5.2.0",
+    "zustand": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
