--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-status-bar": "~1.0.3",
+    "nanoid": "^3.1.20",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-get-random-values": "^1.6.0",
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.13.12",
     "react-router-native": "^5.2.0",
+    "rfdc": "^1.2.0",
     "zustand": "^3.3.2"
   },
   "devDependencies": {
