update the name

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "to-do-done",
+    "name": "To do done",
     "slug": "to-do-done",
     "version": "1.0.4",
     "orientation": "portrait",
